--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^4.1.14"
+    "recharts": "^3.3.0",
+    "tailwindcss": "^4.1.14",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
