--- a/package.json
+++ b/package.json
@@ -27,5 +27,18 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LawyerMediaTechNews/frontend-web.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LawyerMediaTechNews/frontend-web/issues"
+  },
+  "homepage": "https://github.com/LawyerMediaTechNews/frontend-web#readme"
 }
